2006-01-27  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-auth-conv-tty.cc: Move static data and functions
	into the unnamed namespace.

2006-01-26  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.cc (main): Only allow preservation of the user
	environment if not switching users.

	* schroot/sbuild-auth.cc (Auth, set_user): Throw exceptions rather
	than exiting on failure.
	(setupenv): Tidy up setting the environment.

2006-01-26  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-auth.cc
	(~Auth): Shut down PAM if currently active.

2006-01-26  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-keyfile.cc
	(check_priority): Add support for PRIORITY_DISALLOWED.

	* schroot/sbuild-config.cc: Convert to throw exception instead of
	immediately terminating with an error.  This makes unit testing
	possible, and errors are all caught correctly at the top-level.

	* schroot/sbuild-chroot-lvm-snapshot.cc: When reading a keyfile,
	only allow reading "lvm-snapshot-device" when restoring an active
	chroot.

	* configure.ac (AM_INIT_AUTOMAKE): Quote argument.

	* test/sbuild-config.cc: New file.  Test for sbuild::Config.

2006-01-16  Roger Leigh  <rleigh@debian.org>

	* po/vi.po: Add Vietnamese translation.

2006-01-13  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-log.cc: New file.  Test logging with stringbufs.

	* test/sbuild-nostream.cc (test_nostream): Fix whitespace.

2006-01-13  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-nostream.cc: New file.  Test for nostream.

	* test/sbuild-environment.cc (add_simple_examples): Correct
	assertion.

2006-01-12  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-lock.cc: New file.  Tests for locking.

	* schroot/sbuild-lock.cc (set_lock): If the current process
	doesn't own the lock, unlocking always succeeds.

2006-01-12  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-keyfile.cc: New file.  Tests for keyfile.

	* schroot/sbuild-keyfile.h
	(set_value): Insert stringstream value, rather than templated
	value.